DROP TABLE IF EXISTS appointments;
DROP TABLE IF EXISTS availability_slots;
DROP TABLE IF EXISTS services;
DROP TABLE IF EXISTS providers;
DROP TABLE IF EXISTS users;

CREATE TABLE users (
    user_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    role VARCHAR(30) NOT NULL,
    CONSTRAINT chk_users_role CHECK (role IN ('CUSTOMER', 'PROVIDER', 'ADMIN'))
);

CREATE TABLE providers (
    provider_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(150) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    phone VARCHAR(30)
);

CREATE TABLE services (
    service_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL UNIQUE,
    description VARCHAR(500),
    duration_minutes INT NOT NULL,
    CONSTRAINT chk_services_duration CHECK (duration_minutes > 0)
);

CREATE TABLE availability_slots (
    slot_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    provider_id BIGINT NOT NULL,
    service_id BIGINT NOT NULL,
    start_time TIMESTAMP NOT NULL,
    end_time TIMESTAMP NOT NULL,
    is_available BOOLEAN NOT NULL DEFAULT TRUE,
    CONSTRAINT fk_slots_provider
        FOREIGN KEY (provider_id) REFERENCES providers(provider_id),
    CONSTRAINT fk_slots_service
        FOREIGN KEY (service_id) REFERENCES services(service_id),
    CONSTRAINT chk_slots_time CHECK (end_time > start_time),
    CONSTRAINT uq_provider_slot_time UNIQUE (provider_id, start_time, end_time)
);

CREATE TABLE appointments (
    appointment_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL,
    provider_id BIGINT NOT NULL,
    service_id BIGINT NOT NULL,
    slot_id BIGINT NOT NULL UNIQUE,
    status VARCHAR(30) NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_appointments_user
        FOREIGN KEY (user_id) REFERENCES users(user_id),
    CONSTRAINT fk_appointments_provider
        FOREIGN KEY (provider_id) REFERENCES providers(provider_id),
    CONSTRAINT fk_appointments_service
        FOREIGN KEY (service_id) REFERENCES services(service_id),
    CONSTRAINT fk_appointments_slot
        FOREIGN KEY (slot_id) REFERENCES availability_slots(slot_id),
    CONSTRAINT chk_appointments_status CHECK (status IN ('BOOKED', 'CANCELLED', 'COMPLETED'))
);
